# battleship_game

./: CMakeLists.txt  Doxyfile  battleship-game.pro  demo.sh  histogram.txt  main.cpp  qml.sh  ships.kdev4
GameBase/: CMakeLists.txt  CMakeLists.txt~  GameBase.h  GameBase.h~  GameBase.pro  GameBasePlugin.cpp  GameBasePlugin.h  GameBoard.cpp  GameBoard.cpp~  GameBoard.h  GameBoard.h~  Hello.cpp  Makefile  Ship.cpp  Ship.cpp~  Ship.h  cmake_install.cmake
GameManager/: BoardGenerator.cpp  BoardGenerator.h  Common.cpp  Common.h  GameBase.h  GameBasePlugin.cpp  GameBasePlugin.h  GameBoard.cpp  GameBoard.h  GameHistogram.cpp  GameHistogram.h  GameManager.cpp  GameManager.h  GameManager.pro  Ship.cpp  Ship.h  ShotGenerator.cpp  ShotGenerator.h  qmldir
QML/: Makefile  battleship-game_gui.qmlproject  battleship-gui.pro  main.qml
QML/content/: BoardConfigurator.qml  DemoScreen.qml  Game.qml
QML/content/BoardConfigurator/: Configurator.qml  Panel.qml  ShipsPanel.qml  SwitchButton.qml
QML/content/GameBoard/: GameBoard.qml  RectangleUnit.qml
QML/content/Ships/: Ship.qml  ShipsModel.qml
QML/content/Utils/: BusyIndicator.qml  Warning.qml
battleship_qml/: battleship-game_gui.qml
battleship_qml/content/: BoardConfigurator.qml  Game.qml
battleship_qml/content/BoardConfigurator/: Panel.qml  SwitchButton.qml
battleship_qml/content/GameBoard/: GameBoard.qml  RectangleUnit.qml
battleship_qml/content/Ships/: Ship.qml  ShipsModel.qml
demo/: demo.pro  main.cpp
